Fixed a bug causing toast layout to break on long texts

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -90,7 +90,6 @@ Toast
 	position: fixed;
 	margin-top: -0.1rem;
 	left: 50%;
-	min-width: 400px;
 	max-width: 80%;
 	transform: translateX(-50%);
 	box-shadow: $shadow-outset-large;
